--- a/styles/style.css
+++ b/styles/style.css
@@ -160,7 +160,7 @@ canvas{
 }
 
 .char{
-    bottom: 30px;
+    bottom: -30px;
     left: 0px;
 }
 
@@ -172,7 +172,7 @@ canvas{
 }
 
 .walker2{
-    bottom: 12px;
+    bottom: -40px;
     left: 155px;
     transform: scaleX(-1);
 }
@@ -202,8 +202,7 @@ canvas{
     background-color: #568d8f;
     font-size: 18px;
     padding: 4px 8px 4px 8px;
-    margin: 8px;
-    margin: 8px;
+    margin: 4px;
     border: solid 2px #85f0cc;
     color: #85f0cc;
     border-radius: 10px;
@@ -392,23 +391,24 @@ canvas{
 }
 
 .controlls{
-    
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    width: 720px;
+    width: 148px;
     margin: 0px 0px 14px 0px;
-    
+    position: absolute;
+    right: 348px;
 }
 
 .controllsBox{
+    width: 96px;
     background-color: #568d8f;
     border: solid 2px #85f0cc;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0px 12px 0px 12px;
+    margin: 4px 0px 4px 0px;
     padding: 8px 8px 8px 7px;
 }
 
@@ -418,5 +418,6 @@ canvas{
 
 .controllContent{
     position: absolute;
-    bottom: 12px;
+    height: 100%;
+    margin: 248px 0px 0px 0px;
 }
